@@ -24,6 +24,7 @@ import java.nio.file.Paths;
 import java.text.DateFormat;
 import java.text.ParseException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Base64;
 import java.util.Calendar;
 import java.util.Collection;
@@ -170,12 +171,12 @@ public final class CommonUtil {
     return IOUtils.toString(Objects.requireNonNull(loader.getResourceAsStream(file)), UTF_8);
   }
 
-  /** Return list of entiries that are modifiable for performing sort and other operations */
+  /** Return list of entries that are modifiable for performing sort and other operations */
   @SafeVarargs
   public static <T> List<T> listOf(T... entries) {
     if (entries == null) {
       return Collections.emptyList();
     }
-    return new ArrayList<>(List.of(entries));
+    return new ArrayList<>(Arrays.asList(entries));
   }
 }
